test/should-fail/vsgc3152.f3
/**
 * Regress test for VSGC-3152: NPE when binding with Timeline
 *
 * @test/compile-error
 */

class A {
var a;
}

var x = 0.0;
var y = 1;

var b = bind A {
    a : [
        at(1s) {
            x => 100 tween y;
        }
    ]
}
